test/libsolidity/syntaxTests/errors/basic.sol
contract C {
    error MyError();
    error MyError2(uint x);
    error MyError3(uint x, bytes);
}
// ----
